Bug 256496 - AX: Fix various ITM tests after 263832@main
Summary: AX: Fix various ITM tests after 263832@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tyler Wilcock
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-08 15:55 PDT by Tyler Wilcock
Modified: 2023-05-09 00:02 PDT (History)
11 users (show)

See Also:


Attachments
Patch (24.46 KB, patch)
2023-05-08 16:00 PDT, Tyler Wilcock
no flags Details | Formatted Diff | Diff
Patch (25.46 KB, patch)
2023-05-08 17:56 PDT, Tyler Wilcock
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Wilcock 2023-05-08 15:55:46 PDT
263832@main changed the timing of AX object cache updates that some of our tests implicitly relied on. These tests need to be made properly async to be immune to timing changes. This change also exposes bugs where we dereference a null AXObjectCache assuming it will always be present -- we cannot make those assumptions in some contexts anymore.
Comment 1 Radar WebKit Bug Importer 2023-05-08 15:56:01 PDT
<rdar://problem/109063886>
Comment 2 Tyler Wilcock 2023-05-08 16:00:52 PDT
Created attachment 466289 [details]
Patch
Comment 3 Tyler Wilcock 2023-05-08 17:56:16 PDT
Created attachment 466291 [details]
Patch
Comment 4 EWS 2023-05-09 00:01:59 PDT
Committed 263854@main (d57954fad0e9): <https://commits.webkit.org/263854@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 466291 [details].