AX: Fix various ITM tests after 263832@main https://bugs.webkit.org/show_bug.cgi?id=256496 rdar://problem/109063886

Reviewed by Ryosuke Niwa.

263832@main changed the timing of AX object cache updates that some of our tests implicitly relied on.
These tests need to be made properly async to be immune to timing changes. This change also exposes bugs
where we dereference a null AXObjectCache assuming it will always be present -- we cannot make those
assumptions in some contexts anymore.

* LayoutTests/accessibility/focusable-inside-hidden-expected.txt:
* LayoutTests/accessibility/focusable-inside-hidden.html:
* LayoutTests/accessibility/internal-link-anchors2-expected.txt:
* LayoutTests/accessibility/internal-link-anchors2.html:
* LayoutTests/accessibility/mac/content-editable-range-properties-expected.txt:
* LayoutTests/accessibility/mac/content-editable-range-properties.html:
* LayoutTests/accessibility/mac/html-with-aria-label.html:
* LayoutTests/resources/accessibility-helper.js:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsPressAction const):
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::parentObject const):
(WebCore::AccessibilityRenderObject::addNodeOnlyChildren):
* Source/WebCore/accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::headerContainer):

Canonical link: https://commits.webkit.org/263854@main